test/classes/deitz/inherit-class-record/inherit_mod1.good
inherit_mod1.chpl:17: In function 'foo':
inherit_mod1.chpl:18: error: unresolved call 'C.x'
inherit_mod1.chpl:4: note: this candidate did not match: D1.x
inherit_mod1.chpl:18: note: because method call receiver with type 'borrowed C'
inherit_mod1.chpl:4: note: is passed to formal 'this: borrowed D1'
inherit_mod1.chpl:18: note: other candidates are:
inherit_mod1.chpl:8: note:   D2.x
